# centron

./: .gitignore  CMakeLists  CMakeLists.txt  README.md
src/: CMakeLists.txt  Makefile  centron.cpp  centron.h  centron_OnCleanup.cpp  centron_OnEvent.cpp  centron_OnInit.cpp  centron_OnLoop.cpp  centron_OnRender.cpp  config.h  config.h.in  core.cpp  drawable.cpp  drawable.h  graphics.cpp  graphics.h  log.cpp  log.h  main.cpp  position.h  resources.cpp  resources.h  starfield.cpp  starfield.h  test.cpp  timer.cpp  timer.h  util.cpp  util.h
src/lib/: CMakeLists.txt  graphics.cpp  graphics.h  logger.cpp  logger.h  resources.cpp  resources.h
src/lib/gui/: CMakeLists.txt  button.cpp  button.h  buttonstates.cpp  buttonstates.h
